* added new webapi project

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -7,4 +7,5 @@
   <repository path="..\src\MvcModular\packages.config" />
   <repository path="..\src\My.Repository.EF\packages.config" />
   <repository path="..\src\UnitTests\packages.config" />
+  <repository path="..\src\WebApiDemos\packages.config" />
 </repositories>
