--- a/src/WebApiDemos/WebApiDemos.csproj
+++ b/src/WebApiDemos/WebApiDemos.csproj
@@ -163,6 +163,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="ExceptionHandeling\NLogExceptionLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Team.cs" />
     <Compile Include="ValidateModelStateAttribute.cs" />
