* webapitest client added. * WIP : validation of webapi using fluentvalidation.

--- a/src/MvcDemos/packages.config
+++ b/src/MvcDemos/packages.config
@@ -17,6 +17,7 @@
   <package id="jQuery.UI.Combined" version="1.10.3" targetFramework="net40" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
   <package id="jquery-globalize" version="0.1.1" targetFramework="net40" />
+  <package id="knockoutjs" version="2.2.0" targetFramework="net45" />
   <package id="MagicalUnicorn.MvcErrorToolkit" version="2.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.0" targetFramework="net45" />
@@ -27,6 +28,7 @@
   <package id="Microsoft.AspNet.WebApi" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.HelpPage" version="4.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.30506.0" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="2.0.30506.0" targetFramework="net40" />
@@ -40,7 +42,7 @@
   <package id="MvcSiteMapProvider.MVC4.DI.Unity" version="4.4.5" targetFramework="net45" />
   <package id="MvcSiteMapProvider.MVC4.DI.Unity.Modules" version="4.4.5" targetFramework="net45" />
   <package id="MvcSiteMapProvider.Web" version="4.4.5" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="4.5.6" targetFramework="net45" />
   <package id="SecurityGuard.MVC4" version="1.0.10" targetFramework="net40" />
   <package id="System.Web.Providers" version="1.2" targetFramework="net40" />
   <package id="T4Scaffolding" version="1.0.8" targetFramework="net40" />
@@ -49,5 +51,6 @@
   <package id="Unity" version="2.1.505.2" targetFramework="net45" />
   <package id="WebActivator" version="1.4.4" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0.3" targetFramework="net45" />
+  <package id="WebApiTestClient" version="1.1.1" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
