--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,6 +3,7 @@
   <repository path="..\My.Framework.Web\packages.config" />
   <repository path="..\My.Framework\packages.config" />
   <repository path="..\src\Core\packages.config" />
+  <repository path="..\src\Infrastructure\packages.config" />
   <repository path="..\src\IntegrationTests\packages.config" />
   <repository path="..\src\MvcDemos\packages.config" />
   <repository path="..\src\MvcModular\packages.config" />
