--- a/src/MvcDemos/Web.config
+++ b/src/MvcDemos/Web.config
@@ -88,12 +88,12 @@
       <add name="UrlRoutingModule-4.0" type="System.Web.Routing.UrlRoutingModule" />
     </modules>
     
-    <httpErrors existingResponse="Replace">
+    <!--<httpErrors existingResponse="Replace">
       
       
       
       
-    </httpErrors>
+    </httpErrors>-->
   <handlers>
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" />
@@ -142,9 +142,9 @@
   </runtime>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=MvcDemos-20131116202707;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
-    <add name="MyCoolEntities" connectionString="metadata=res://*/MyCoolEntities.csdl|res://*/MyCoolEntities.ssdl|res://*/MyCoolEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\SQLEXPRESS;Initial Catalog=MyCoolDb;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MyCoolEntities" connectionString="metadata=res://*/MyCoolEntities.csdl|res://*/MyCoolEntities.ssdl|res://*/MyCoolEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=(localdb)\v11.0;Initial Catalog=MyCoolDb;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="MembershipConnection" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=MyCoolDb;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="MvcDemosContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=MvcDemosContext-20131229143614; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|MvcDemosContext-20131229143614.mdf" providerName="System.Data.SqlClient" />
-    <add name="MvcApplication3Context" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=MvcApplication3Context-20131229145725; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|MvcApplication3Context-20131229145725.mdf" providerName="System.Data.SqlClient" />
+    <!--<add name="MvcApplication3Context" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=MvcApplication3Context-20131229145725; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|MvcApplication3Context-20131229145725.mdf" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
 </configuration>
