--- a/src/MvcDemos/bower.json
+++ b/src/MvcDemos/bower.json
@@ -1,18 +1,19 @@
 {
-    "name": "mvcdemos",
-    "version": "0.0.1",
-    "description": "mvcdemos",
-    "authors": [],
-    "license": "MIT",
-    "ignore": [
-        "**/.*",
-        "node_modules",
-        "bower_components",
-        "test",
-        "tests"
-    ],
-    "dependencies": {
-        "angular": "~1.3.8",
-        "angular-sanitize": "~1.3.8"
-    }
+  "name": "mvcdemos",
+  "version": "0.0.1",
+  "description": "mvcdemos",
+  "authors": [],
+  "license": "MIT",
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ],
+  "dependencies": {
+    "angular": "~1.3.8",
+    "angular-sanitize": "~1.3.8",
+    "angular-messages": "~1.3.10"
+  }
 }
