--- a/src/MvcDemos/MvcDemos.csproj
+++ b/src/MvcDemos/MvcDemos.csproj
@@ -243,6 +243,7 @@
     <Compile Include="Features\Setting\SettingController.cs" />
     <Compile Include="Features\Validation\ActionFilters\CheckModelForNullAttribute.cs" />
     <Compile Include="Features\Validation\Controllers\Mvc\ReservationController.cs" />
+    <Compile Include="Features\Validation\Models\ReservationViewModel.cs" />
     <Compile Include="Helpers\JavaScriptHelper.cs" />
     <Compile Include="Infrastructure\ActionFilter\HandleRecordNotFoundAttribute.cs" />
     <Compile Include="Infrastructure\ActionResult\ResourceNotFoundResult.cs" />
@@ -354,8 +355,11 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="app\AjaxForm\mockAjax.js" />
-    <Content Include="app\app.js" />
-    <Content Include="app\user.controller.js" />
+    <Content Include="app\app.module.js" />
+    <Content Include="app\app.route.js" />
+    <Content Include="app\reservation\reservation.html" />
+    <Content Include="app\reservation\reservation.dataservice.js" />
+    <Content Include="app\reservation\reservation.controller.js" />
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Areas\HelpPage\TestClient.css" />
     <Content Include="bower_components\angular-sanitize\angular-sanitize.js" />
