--- a/src/MvcDemos/bower.json
+++ b/src/MvcDemos/bower.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "angular": "~1.3.8",
     "angular-sanitize": "~1.3.8",
-    "angular-messages": "~1.3.10"
+    "angular-messages": "~1.3.10",
+    "angular-ui-router": "~0.2.13"
   }
 }
