--- a/src/MvcDemos/MvcDemos.csproj
+++ b/src/MvcDemos/MvcDemos.csproj
@@ -357,6 +357,7 @@
     <Content Include="app\AjaxForm\mockAjax.js" />
     <Content Include="app\app.module.js" />
     <Content Include="app\app.route.js" />
+    <Content Include="app\reservation\reservationServerSideOnly.html" />
     <Content Include="app\reservation\reservation.html" />
     <Content Include="app\reservation\reservation.dataservice.js" />
     <Content Include="app\reservation\reservation.controller.js" />
