--- a/src/MvcDemos/package.json
+++ b/src/MvcDemos/package.json
@@ -1,8 +1,9 @@
 {
-    "version": "1.0.0",
-    "devDependencies": {
-        "bower": "^1.3.12",
-        "gulp": "^3.8.10",
-        "gulp-bower": "^0.0.7"
-    }
+  "version": "1.0.0",
+  "devDependencies": {
+    "bower": "^1.3.12",
+    "browser-sync": "^2.3.1",
+    "gulp": "^3.8.11",
+    "gulp-bower": "^0.0.7"
+  }
 }
